fix nbt